# feed-a-dev-backend

./: .gitignore  Cargo.toml  Makefile  README.md  diesel.toml  docker-compose.yml
migrations/2024-10-23-205210_create_snacks_table/: down.sql  up.sql
migrations/2024-10-23-232744_create_users_table/: up.sql
migrations/2024-10-23-235320_user_id_to_snacks/: up.sql
migrations/2024-10-24-004753_update_user_roles/: down.sql  up.sql
migrations/2024-10-24-004935_add_dev_pm_relationships/: down.sql  up.sql
src/: db.rs  main.rs  schema.rs
src/auth/: mod.rs  user.rs
src/catchers/: mod.rs
src/models/: mod.rs  relationship.rs  snack.rs  user.rs
src/routes/: auth.rs  mod.rs  relationship.rs  snack.rs
