[package]
name = "feed-a-dev"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.38", features = ["serde"] }
diesel = { version = "2.2.4", features = ["postgres", "numeric", "serde_json", "chrono"] }
dotenv = "0.15.0"
rocket = { version = "0.5.1", features = ["json"] }
rust_decimal = { version = "1.36.0", features = ["db-diesel-postgres", "serde-with-str"] }
serde = "1.0.213"
